mostly longspine additions

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -190,11 +190,10 @@
 
 
         # http://linked.data.gov.au/def/asgs
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs.ttl? [R=302,L]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1.ttl [R=302,L]
-        RewriteRule ^/def/asgs(.*).ttl$ http://www.linked.data.gov.au/def/asgs$1.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+	RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/asgs http://www.linked.data.gov.au/def/asgs/asgs.ttl? [R=302,L]
+        RewriteRule ^/def/asgs(.*).ttl$ http://www.linked.data.gov.au/def/asgs/asgs.ttl [R=302,L]
         RewriteRule ^/def/asgs(.*)$ http://www.linked.data.gov.au/def/asgs$1 [R=302,L]
 
 
@@ -274,11 +273,10 @@
 
 
         # http://linked.data.gov.au/def/loci
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$
-        RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci.ttl? [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci$1.ttl [R=302,L]
-        RewriteRule ^/def/loci(.*).ttl$ http://www.linked.data.gov.au/def/loci$1.ttl [R=302,L]
+        RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci/loci.ttl [R=302,L]
+        RewriteRule ^/def/loci.ttl$ http://www.linked.data.gov.au/def/loci/loci.ttl [R=302,L]
         RewriteRule ^/def/loci(.*)$ http://www.linked.data.gov.au/def/loci$1 [R=302,L]        
 
         # http://linked.data.gov.au/def/geofabric
