--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -10,7 +10,163 @@
 
         RewriteEngine  on
 
+	# LongSpine Onts
 
+        # LongSpine 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/longspine.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/longspine-ont/master/longspine.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/longspine https://raw.githubusercontent.com/CSIRO-enviro-informatics/longspine-ont/master/longspine.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/longspine https://github.com/CSIRO-enviro-informatics/longspine-ont
+
+        # Administrative Arrangements Orders
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/aao.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/aao-ont/master/schema/aao.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/aao https://raw.githubusercontent.com/CSIRO-enviro-informatics/aao-ont/master/schema/aao.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/aao https://github.com/CSIRO-enviro-informatics/aao-ont
+
+        # Australian Government Organisations Register
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/agor.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/agor-ont/master/schema/agor.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/agor https://raw.githubusercontent.com/CSIRO-enviro-informatics/agor-ont/master/schema/agor.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/agor https://github.com/CSIRO-enviro-informatics/agor-ont
+
+        # Commonwealth Record Series 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/crs.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-ont/master/schema/crs.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/crs https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-ont/master/schema/crs.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/crs https://github.com/CSIRO-enviro-informatics/crs-ont
+
+        # Portfolio Budget Statements
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/pbs.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/pbs-ont/master/schema/pbs.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/pbs https://raw.githubusercontent.com/CSIRO-enviro-informatics/pbs-ont/master/schema/pbs.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/pbs https://github.com/CSIRO-enviro-informatics/pbs-ont
+
+        # Records Disposal Authority
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/rda.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-ont/master/schema/rda.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/rda https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-ont/master/schema/rda.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/rda https://github.com/CSIRO-enviro-informatics/rda-ont
+
+	# LongSpine vocs
+
+        # COFOG-A vocabulary
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/cofog-a.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/cofog-a-vocab/master/cofog-a.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/cofog-a https://raw.githubusercontent.com/CSIRO-enviro-informatics/cofog-a-vocab/master/cofog-a.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/cofog-a https://github.com/CSIRO-enviro-informatics/cofog-a-vocab
+
+        # COFOG vocabulary 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/cofog.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/cofog-vocab/master/cofog.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/cofog https://raw.githubusercontent.com/CSIRO-enviro-informatics/cofog-vocab/master/cofog.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/cofog https://github.com/CSIRO-enviro-informatics/cofog-vocab
+
+        # CRS Thesuarus vocabulary 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/crs-th.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-th/master/crs-th.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/crs-th https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-th/master/crs-th.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/crs-th https://github.com/CSIRO-enviro-informatics/crs-th-vocab
+
+        # GPC vocabulary 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/gpc.ttl https://raw.githubusercontent.com/nicholascar/gpc-vocab/master/gpc.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/gpc https://raw.githubusercontent.com/nicholascar/gpc-vocab/master/gpc.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/gpc https://github.com/nicholascar/gpc-vocab
+
+        # LGPC vocabulary 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/lgpc.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/lgpc-vocab/master/lgpc.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/lgpc https://raw.githubusercontent.com/CSIRO-enviro-informatics/lgpc-vocab/master/lgpc.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/lgpc https://github.com/CSIRO-enviro-informatics/lgpc-vocab
+
+        # RDA vocabulary - not public yet
+        # call for the RDF version of the ont to the ttl file
+        # RewriteRule ^/def/rda.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-vocab/master/rda.ttl [R=302,L]
+        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        # RewriteCond %{HTTP:Accept} text/turtle [NC]
+        # RewriteRule ^/def/rda https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-vocab/master/rda.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        # RewriteRule ^/def/rda https://github.com/CSIRO-enviro-informatics/rda-vocab
+
+	# LongSpine Linksets
+        # agiftcrsth Linkset 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/dataset/agiftcrsth.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcrsth-linkset/master/agiftcrsth.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/agiftcrsth https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcrsth-linkset/master/agiftcrsth.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/dataset/agiftcrsth https://github.com/CSIRO-enviro-informatics/agiftcrsth-linkset
+
+        # agiftcofoga Linkset 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/dataset/agiftcofoga.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcofoga-linkset/master/agiftcofoga.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/agiftcofoga https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcofoga-linkset/master/agiftcofoga.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/dataset/agiftcofoga https://github.com/CSIRO-enviro-informatics/agiftcofoga-linkset
+
+        # cofogcofoga Linkset 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/dataset/cofogcofoga.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/cofogcofoga-linkset/master/cofogcofoga.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/cofogcofoga https://raw.githubusercontent.com/CSIRO-enviro-informatics/cofogcofoga-linkset/master/cofogcofoga.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/dataset/cofogcofoga https://github.com/CSIRO-enviro-informatics/cofogcofoga-linkset
+
+        # lgpcgpc Linkset 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/dataset/lgpcgpc.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/lgpcgpc-linkset/master/lgpcgpc.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/lgpcgpc https://raw.githubusercontent.com/CSIRO-enviro-informatics/lgpcgpc-linkset/master/lgpcgpc.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/dataset/lgpcgpc https://github.com/CSIRO-enviro-informatics/lgpcgpc-linkset
+
+        # gpclgpc Linkset 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/dataset/gpclgpc.ttl https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/gpclgpc https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/dataset/gpclgpc https://github.com/nicholascar/gpclgpc-linkset
 
         #
         #       Top-level registers
@@ -26,32 +182,6 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
 	RewriteRule ^/def/CSIRO-ePub-DCAP(.*)$ /def/CSIRO-ePub-DCAP$1.ttl?  [R=302,L]
         RewriteRule ^/def/CSIRO-ePub-DCAP(.*)$ /def/CSIRO-ePub-DCAP$1 [R=302,L]
-
-
-        RewriteRule   "/board/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/board/$1"  [R=303,L,QSA]
-        RewriteRule   "/org/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/org/$1"  [R=303,L,QSA]
-        RewriteRule   "/person/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/person/$1"  [R=303,L,QSA]
-        RewriteRule   "/portfolio/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/portfolio/$1"  [R=303,L,QSA]
-
-        RewriteRule   "/dataset/auorg/([a-zA-Z]+)/(.+)"  "http://test.linked.data.gov.au/dataset/auorg/object?uri=http://test.linked.data.gov.au/dataset/auorg/$1/$2"  [R=303,L,QSA]
-
-        ProxyPass         "/org/"  "http://13.236.122.60/dataset/auorg/org/"
-        ProxyPassReverse  "/org/"  "http://13.236.122.60/dataset/auorg/org/"
-
-        ProxyPass         "/board/"  "http://13.236.122.60/dataset/auorg/board/"
-        ProxyPassReverse  "/board/"  "http://13.236.122.60/dataset/auorg/board/"
-
-        ProxyPass         "/person/"  "http://13.236.122.60/dataset/auorg/person/"
-        ProxyPassReverse  "/person/"  "http://13.236.122.60/dataset/auorg/person/"
-
-        ProxyPass         "/portfolio/"  "http://13.236.122.60/dataset/auorg/portfolio/"
-        ProxyPassReverse  "/portfolio/"  "http://13.236.122.60/dataset/auorg/portfolio/"
-
-        ProxyPass "/dataset/auorg"  "http://13.236.122.60/dataset/auorg"
-        ProxyPassReverse "/dataset/auorg"  "http://13.236.122.60/dataset/auorg"
-
-        ProxyPass         "/def/"  "http://203.101.224.166/def/"
-        ProxyPassReverse  "/def/"  "http://203.101.224.166/def/"
 
         ProxyPass "/"  "http://203.101.224.166/"
         ProxyPassReverse "/"  "http://203.101.224.166/"
