--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -40,13 +40,7 @@
         RewriteRule ^/def/agor https://github.com/CSIRO-enviro-informatics/agor-ont
 
         # Commonwealth Record Series 
-        # call for the RDF version of the ont to the ttl file
-        RewriteRule ^/def/crs.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-ont/master/schema/crs.ttl [R=302,L]
-        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/crs https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-ont/master/schema/crs.ttl [R=302,L]
-        # HTML just to GitHub main entry point
-        RewriteRule ^/def/crs https://github.com/CSIRO-enviro-informatics/crs-ont
+        # not needed as /def/crs is in production
 
         # Portfolio Budget Statements
         # call for the RDF version of the ont to the ttl file
@@ -68,7 +62,17 @@
 
 	# LongSpine vocs
 
+        # AGIFT vocabulary
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/def/agift.jsonld https://data.naa.gov.au/def/agift/export/def/agift.jsonld [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=application/ld+json [OR]
+        RewriteCond %{HTTP:Accept} application/ld+json [NC]
+        RewriteRule ^/def/agift https://data.naa.gov.au/def/agift/export/def/agift.jsonld [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/def/agift https://data.naa.gov.au/def/agift.html
+
         # COFOG-A vocabulary
+        # this is ordered before COFOG due to otherwise hogging patterns
         # call for the RDF version of the ont to the ttl file
         RewriteRule ^/def/cofog-a.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/cofog-a-vocab/master/cofog-a.ttl [R=302,L]
         RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
@@ -113,16 +117,17 @@
         # HTML just to GitHub main entry point
         RewriteRule ^/def/lgpc https://github.com/CSIRO-enviro-informatics/lgpc-vocab
 
-        # RDA vocabulary - not public yet
+        # RDA vocabulary
         # call for the RDF version of the ont to the ttl file
-        # RewriteRule ^/def/rda.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-vocab/master/rda.ttl [R=302,L]
-        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
-        # RewriteCond %{HTTP:Accept} text/turtle [NC]
-        # RewriteRule ^/def/rda https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-vocab/master/rda.ttl [R=302,L]
+        RewriteRule ^/def/rda.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-vocab/master/rdavoc.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/rda https://raw.githubusercontent.com/CSIRO-enviro-informatics/rda-vocab/master/rdavoc.ttl [R=302,L]
         # HTML just to GitHub main entry point
-        # RewriteRule ^/def/rda https://github.com/CSIRO-enviro-informatics/rda-vocab
+        RewriteRule ^/def/rda https://github.com/CSIRO-enviro-informatics/rda-vocab
 
 	# LongSpine Linksets
+
         # agiftcrsth Linkset 
         # call for the RDF version of the ont to the ttl file
         RewriteRule ^/dataset/agiftcrsth.ttl https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcrsth-linkset/master/agiftcrsth.ttl [R=302,L]
@@ -167,6 +172,44 @@
         RewriteRule ^/dataset/gpclgpc https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
         # HTML just to GitHub main entry point
         RewriteRule ^/dataset/gpclgpc https://github.com/nicholascar/gpclgpc-linkset
+
+	# LongSpine Linksets
+
+        # # AAO Dataset 
+        # # call for the RDF version of the ont to the ttl file
+        # RewriteRule ^/dataset/aao.ttl https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
+        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        # RewriteCond %{HTTP:Accept} text/turtle [NC]
+        # RewriteRule ^/dataset/gpclgpc https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
+        # # HTML just to GitHub main entry point
+        # RewriteRule ^/dataset/gpclgpc https://github.com/nicholascar/gpclgpc-linkset
+
+        # # AGOR Dataset 
+        # # call for the RDF version of the ont to the ttl file
+        # RewriteRule ^/dataset/aao.ttl https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
+        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        # RewriteCond %{HTTP:Accept} text/turtle [NC]
+        # RewriteRule ^/dataset/gpclgpc https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
+        # # HTML just to GitHub main entry point
+        # RewriteRule ^/dataset/gpclgpc https://github.com/nicholascar/gpclgpc-linkset
+
+        # CRS Test Dataset 
+        # call for the RDF version of the ont to the ttl file
+        RewriteRule ^/dataset/crs.ttl https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
+        # HTML just to GitHub main entry point
+        RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test
+
+        # # PBS Dataset 
+        # # call for the RDF version of the ont to the ttl file
+        # RewriteRule ^/dataset/crs.ttl https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
+        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
+        # RewriteCond %{HTTP:Accept} text/turtle [NC]
+        # RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
+        # # HTML just to GitHub main entry point
+        # RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test        
 
         #
         #       Top-level registers
