removing QSA from redirects

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -29,9 +29,8 @@
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011/index.ttl [R=302,L]
+        RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011/index.ttl? [R=302,L]
         RewriteRule ^/dataset/asgs2011.ttl$                     http://asgsld.net/2011/index.ttl [R=302,L]
-        ]
         RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011/index.ttl [R=302,L]
         RewriteRule ^/dataset/asgs2011$                         http://asgsld.net/2011  [R=302,L]
         # Top-level Registers
@@ -52,7 +51,7 @@
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016/index.ttl [R=302,L]
+        RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016/index.ttl? [R=302,L]
         RewriteRule ^/dataset/asgs2016.ttl$                     http://asgsld.net/2016/index.ttl [R=302,L]
         RewriteRule ^/dataset/asgs2016$                         http://asgsld.net/2016  [R=302,L]
         # Top-level Registers
@@ -73,7 +72,7 @@
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/data-policies$                    http://licences.csiro.au/index.ttl [R=302,L]
+        RewriteRule ^/dataset/data-policies$                    http://licences.csiro.au/index.ttl? [R=302,L]
         RewriteRule ^/dataset/data-policies.ttl$                http://licences.csiro.au/index.ttl [R=302,L]
         RewriteRule ^/dataset/data-policies$                    http://licences.csiro.au/  [R=302,L]
         # Top-level Registers
@@ -100,12 +99,12 @@
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/geofabric$                        http://geofabricld.net/index.ttl [R=302,L]
+        RewriteRule ^/dataset/geofabric$                        http://geofabricld.net/index.ttl? [R=302,L]
         RewriteRule ^/dataset/geofabric.ttl$                    http://geofabricld.net/index.ttl [R=302,L]
         RewriteRule ^/dataset/geofabric$                        http://geofabricld.net  [R=302,L]
         # Top-level Registers
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/dataset/geofabric/(.*)/$                  http://geofabricld.net/$1/?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/geofabric/(.*)/index.ttl$         http://geofabricld.net/$1/?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/geofabric/(.*)/$                  http://geofabricld.net/$1/ [R=302,L]
@@ -121,7 +120,7 @@
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf$                             http://gnafld.net/index.ttl [R=302,L]
+        RewriteRule ^/dataset/gnaf$                             http://gnafld.net/index.ttl? [R=302,L]
         RewriteRule ^/dataset/gnaf.ttl$                         http://gnafld.net/index.ttl [R=302,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/dataset/gnaf$                             http://gnafld.net/index.ttl [R=302,L]
@@ -143,7 +142,7 @@
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/gnaf-2016-05$                     http://gnafld.net/2016-05/index.ttl [R=302,L]
+        RewriteRule ^/dataset/gnaf-2016-05$                     http://gnafld.net/2016-05/index.ttl? [R=302,L]
         RewriteRule ^/dataset/gnaf-2016-05.ttl$                 http://gnafld.net/2016-05/index.ttl [R=302,L]
         RewriteRule ^/dataset/gnaf-2016-05$                     http://gnafld.net/2016-05  [R=302,L]
         # Top-level Registers
@@ -167,7 +166,7 @@
         # http://linked.data.gov.au/def/agrif
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/agrif(.*)$                            http://www.linked.data.gov.au/def/agrif.ttl [R=302,L]
+        RewriteRule ^/def/agrif(.*)$                            http://www.linked.data.gov.au/def/agrif.ttl? [R=302,L]
         RewriteRule ^/def/agrif(.*).ttl$                        http://www.linked.data.gov.au/def/agrif.ttl [R=302,L]
         RewriteRule ^/def/agrif(.*)$                            http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
 
@@ -175,7 +174,7 @@
         # http://linked.data.gov.au/def/asgs
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/asgs                                  http://www.linked.data.gov.au/def/asgs/asgs.ttl [R=302,L]
+        RewriteRule ^/def/asgs                                  http://www.linked.data.gov.au/def/asgs/asgs.ttl? [R=302,L]
         RewriteRule ^/def/asgs(.*).ttl$                         http://www.linked.data.gov.au/def/asgs/asgs.ttl [R=302,L]
         RewriteRule ^/def/asgs(.*)$                             http://www.linked.data.gov.au/def/asgs$1 [R=302,L]
 
@@ -185,7 +184,7 @@
         # requests for .../borehole/... go to .../borehole#...
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/borehole(.*)$                         http://www.linked.data.gov.au/def/borehole.ttl [R=302,L]
+        RewriteRule ^/def/borehole(.*)$                         http://www.linked.data.gov.au/def/borehole.ttl? [R=302,L]
         RewriteRule ^/def/borehole(.*).ttl$                     http://www.linked.data.gov.au/def/borehole.ttl [R=302,L]
         RewriteRule ^/def/borehole$                             http://www.linked.data.gov.au/def/borehole [R=302,L]
         RewriteRule ^/def/borehole/(.*)$                        http://www.linked.data.gov.au/def/borehole/#$1 [R=302,L,NE]
@@ -193,7 +192,7 @@
         # http://linked.data.gov.au/def/crs
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/crs(.*)$                              http://www.linked.data.gov.au/def/crs.ttl [R=302,L]
+        RewriteRule ^/def/crs(.*)$                              http://www.linked.data.gov.au/def/crs/schema/crs.ttl? [R=302,L]
         RewriteRule ^/def/crs(.*).ttl$                          http://www.linked.data.gov.au/def/crs/schema/crs.ttl [R=302,L]
         RewriteRule ^/def/crs(.*)$                              http://www.linked.data.gov.au/def/crs$1 [R=302,L]
 
@@ -201,7 +200,7 @@
         # all requests for RDF (turtle) just go to the whole borehole.ttl doc
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/dataset(.*)$                          http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
+        RewriteRule ^/def/dataset(.*)$                          http://www.linked.data.gov.au/def/dataset.ttl? [R=302,L]
         RewriteRule ^/def/dataset(.*).ttl$                      http://www.linked.data.gov.au/def/dataset.ttl [R=302,L]
         RewriteRule ^/def/dataset$                              http://www.linked.data.gov.au/def/dataset$1 [R=302,L]
         RewriteRule ^/def/dataset/(.*)$                         http://www.linked.data.gov.au/def/dataset#$1 [R=302,L]
@@ -210,15 +209,15 @@
         # http://linked.data.gov.au/def/fsdf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/fsdf(.*)$                             http://www.linked.data.gov.au/def/fsdf.ttl [R=302,L]
-        RewriteRule ^/def/fsdf(.*).ttl$                         http://www.linked.data.gov.au/def/fsdf$1.ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*)$                             http://www.linked.data.gov.au/def/fsdf.ttl? [R=302,L]
+        RewriteRule ^/def/fsdf(.*).ttl$                         http://www.linked.data.gov.au/def/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$                             http://www.linked.data.gov.au/def/fsdf$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/gnaf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/gnaf(.*)$                             http://gnafld.net/def/gnaf$1.ttl [R=302,L]
+        RewriteRule ^/def/gnaf(.*)$                             http://gnafld.net/def/gnaf$1.ttl? [R=302,L]
         RewriteRule ^/def/gnaf(.*).ttl$                         http://gnafld.net/def/gnaf$1.ttl [R=302,L]
         RewriteRule ^/def/gnaf(.*)$                             http://gnafld.net/def/gnaf$1 [R=302,L]
 
@@ -226,7 +225,7 @@
         # http://linked.data.gov.au/def/iso19160-1-address
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/iso19160-1-address(.*)$               http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address(.*)$               http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl? [R=302,L]
         RewriteRule ^/def/iso19160-1-address(.*).ttl$           http://www.linked.data.gov.au/def/iso19160-1-address$1.ttl [R=302,L]
         RewriteRule ^/def/iso19160-1-address(.*)$               http://www.linked.data.gov.au/def/iso19160-1-address$1 [R=302,L]
 
@@ -234,29 +233,29 @@
         # http://linked.data.gov.au/def/iso19160-1-address-nz-profile
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$    http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl [R=302,L]
-        RewriteRule ^/def/iso19160-1-address-nz-profile(.*).ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1.ttl [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$    http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile.ttl? [R=302,L]
+        RewriteRule ^/def/iso19160-1-address-nz-profile(.*).ttl$ http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile.ttl [R=302,L]
         RewriteRule ^/def/iso19160-1-address-nz-profile(.*)$    http://www.linked.data.gov.au/def/iso19160-1-address-nz-profile$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/loci
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/loci(.*)$                             http://www.linked.data.gov.au/def/loci/loci.ttl [R=302,L]
+        RewriteRule ^/def/loci(.*)$                             http://www.linked.data.gov.au/def/loci/loci.ttl? [R=302,L]
         RewriteRule ^/def/loci.ttl$                             http://www.linked.data.gov.au/def/loci/loci.ttl [R=302,L]
         RewriteRule ^/def/loci(.*)$                             http://www.linked.data.gov.au/def/loci$1 [R=302,L]        
 
         # http://linked.data.gov.au/def/geofabric
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geofabric                             http://www.linked.data.gov.au/def/geofabric.ttl [R=302,L]
+        RewriteRule ^/def/geofabric                             http://www.linked.data.gov.au/def/geofabric.ttl? [R=302,L]
         RewriteRule ^/def/geofabric.ttl$                        http://www.linked.data.gov.au/def/geofabric.ttl [R=302,L]
         RewriteRule ^/def/geofabric(.*)$                        htp://www.linked.data.gov.au/def/geofabric$1 [R=302,L]
 
         # http://linked.data.gov.au/def/placenames
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/placenames(.*)$                       http://www.linked.data.gov.au/def/placenames/placenames.ttl [R=302,L]
+        RewriteRule ^/def/placenames(.*)$                       http://www.linked.data.gov.au/def/placenames/placenames.ttl? [R=302,L]
         RewriteRule ^/def/placenames.ttl$                       http://www.linked.data.gov.au/def/placenames/placenames.ttl [R=302,L]
         RewriteRule ^/def/placenames/?$                         http://www.linked.data.gov.au/def/placenames [R=302,L]	
         RewriteMap tolower int:tolower
@@ -266,8 +265,8 @@
         # http://linked.data.gov.au/def/plot
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/plot(.*)$                             http://www.linked.data.gov.au/def/plot.ttl [R=302,L]
-        RewriteRule ^/def/plot(.*).ttl$                         http://www.linked.data.gov.au/def/plot$1.ttl [R=302,L]
+        RewriteRule ^/def/plot(.*)$                             http://www.linked.data.gov.au/def/plot.ttl? [R=302,L]
+        RewriteRule ^/def/plot(.*).ttl$                         http://www.linked.data.gov.au/def/plot.ttl [R=302,L]
         RewriteRule ^/def/plot(.*)$                             http://www.linked.data.gov.au/def/plot$1 [R=302,L]
 
         #
@@ -406,7 +405,7 @@
         # AGIFT / CRS Th
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/agiftcrsth(.*)$                   https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcrsth-linkset/master/agiftcrsth.ttl [R=302,L]
+        RewriteRule ^/dataset/agiftcrsth(.*)$                   https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcrsth-linkset/master/agiftcrsth.ttl? [R=302,L]
         RewriteRule ^/dataset/agiftcrsth(.*).ttl$               https://raw.githubusercontent.com/CSIRO-enviro-informatics/agiftcrsth-linkset/master/agiftcrsth.ttl [R=302,L]        
         RewriteRule ^/dataset/agiftcrsth                        https://github.com/CSIRO-enviro-informatics/agiftcrsth-linkset [L,R=302]
         # <Location /foo.xml>
