fixed GNAF pattern

--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -132,6 +132,7 @@
         RewriteRule ^/dataset/gnaf/(.*)/$                       http://gnafld.net/$1/ [R=302,L]
         # sub-dataset objects
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/dataset/gnaf/(.*)$                        http://gnafld.net/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/gnaf/(.*).ttl$                    http://gnafld.net/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/gnaf/(.*)$                        http://gnafld.net/$1 [R=302,L]
