--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -189,6 +189,13 @@
         RewriteRule ^/def/borehole$                             http://www.linked.data.gov.au/def/borehole [R=302,L]
         RewriteRule ^/def/borehole/(.*)$                        http://www.linked.data.gov.au/def/borehole/#$1 [R=302,L,NE]
 
+        # CRS Th - must occur before CRS ont else pattern clash
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/crs-th(.*)$                              https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-th/master/crs-th.ttl? [R=302,L]
+        RewriteRule ^/def/crs-th(.*).ttl$                          https://raw.githubusercontent.com/CSIRO-enviro-informatics/crs-th/master/crs-th.ttl [R=302,L]
+        RewriteRule ^/def/crs-th(.*)$                              https://github.com/CSIRO-enviro-informatics/crs-th [R=302,L]
+
         # http://linked.data.gov.au/def/crs
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
