--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -332,72 +332,72 @@
         # Vocab: Earth Science Data Category
         # http://linked.data.gov.au/def/earth-science-data-category
         RewriteRule ^/def/earth-science-data-category/?$        http://vocabs.gsq.digital/vocabulary/earth-science-data-category [R=302,L]
-        RewriteRule ^/def/earth-science-data-category(.*)$      http://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/earth-science-data-category(.*)$      http://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
 
         # Vocab: Geochemistry Sampling Method
         # http://linked.data.gov.au/def/geochemistry-sampling-method
         RewriteRule ^/def/geochemistry-sampling-method/?$       http://vocabs.gsq.digital/vocabulary/geochemistry-sampling-method [R=302,L]
-        RewriteRule ^/def/geochemistry-sampling-method(.*)$     http://vocabs.gsq.digital/object?vocab_id=geochemistry-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/geochemistry-sampling-method(.*)$     http://vocabs.gsq.digital/object?vocab_id=geochemistry-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Geophysical Survey
         # http://linked.data.gov.au/def/geophysical-survey
         RewriteRule ^/def/geophysical-survey/?$                 http://vocabs.gsq.digital/vocabulary/geophysical-survey [R=302,L]
-        RewriteRule ^/def/geophysical-survey(.*)$               http://vocabs.gsq.digital/object?vocab_id=geophysical-survey&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/geophysical-survey(.*)$               http://vocabs.gsq.digital/object?vocab_id=geophysical-survey&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
 
         # Vocab: Geoscience Feature of Interest
         # http://linked.data.gov.au/def/geoscience-foi
         RewriteRule ^/def/geoscience-foi/?$                     http://vocabs.gsq.digital/vocabulary/geoscience-feature-of-interest [R=302,L]
-        RewriteRule ^/def/geoscience-foi(.*)$                   http://vocabs.gsq.digital/object?vocab_id=geoscience-feature-of-interest&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/geoscience-foi(.*)$                   http://vocabs.gsq.digital/object?vocab_id=geoscience-feature-of-interest&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
 
         # Vocab: GSQ Commodity Code
         # http://linked.data.gov.au/def/gsq-commodity-code
         RewriteRule ^/def/gsq-commodity-code/?$                 http://vocabs.gsq.digital/vocabulary/gsq-commodity-code [R=302,L]
-        RewriteRule ^/def/gsq-commodity-code(.*)$               http://vocabs.gsq.digital/object?vocab_id=gsq-commodity-code&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/gsq-commodity-code(.*)$               http://vocabs.gsq.digital/object?vocab_id=gsq-commodity-code&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
 
         # Vocab: GSQ Dataset Theme
         # http://linked.data.gov.au/def/gsq-dataset-theme
         RewriteRule ^/def/gsq-dataset-theme/?$                  http://vocabs.gsq.digital/vocabulary/gsq-dataset-theme [R=302,L]
-        RewriteRule ^/def/gsq-dataset-theme(.*)$                http://vocabs.gsq.digital/object?vocab_id=gsq-dataset-theme&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/gsq-dataset-theme(.*)$                http://vocabs.gsq.digital/object?vocab_id=gsq-dataset-theme&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
 
         # Vocab: GSQ Lithology
         # http://linked.data.gov.au/def/gsq-lithology
         RewriteRule ^/def/gsq-lithology/?$                      http://vocabs.gsq.digital/vocabulary/gsq-lithology [R=302,L]
-        RewriteRule ^/def/gsq-lithology(.*)$                    http://vocabs.gsq.digital/object?vocab_id=gsq-lithology&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/gsq-lithology(.*)$                    http://vocabs.gsq.digital/object?vocab_id=gsq-lithology&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Mining Industry Report
         # http://linked.data.gov.au/def/mining-industry-report
         RewriteRule ^/def/mining-industry-report/?$             http://vocabs.gsq.digital/vocabulary/mining-industry-report [R=302,L]
-        RewriteRule ^/def/mining-industry-report(.*)$           http://vocabs.gsq.digital/object?vocab_id=mining-industry-report&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/mining-industry-report(.*)$           http://vocabs.gsq.digital/object?vocab_id=mining-industry-report&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Queensland Mining Permit
         # http://linked.data.gov.au/def/qld-mining-permit
         RewriteRule ^/def/qld-mining-permit/?$                  http://vocabs.gsq.digital/vocabulary/qld-mining-permit [R=302,L]
-        RewriteRule ^/def/qld-mining-permit(.*)$                http://vocabs.gsq.digital/object?vocab_id=qld-mining-permit&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/qld-mining-permit(.*)$                http://vocabs.gsq.digital/object?vocab_id=qld-mining-permit&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Mining Sample
         # http://linked.data.gov.au/def/mining-sample
         RewriteRule ^/def/mining-sample/?$                      http://vocabs.gsq.digital/vocabulary/mining-sample [R=302,L]
-        RewriteRule ^/def/mining-sample(.*)$                    http://vocabs.gsq.digital/object?vocab_id=mining-sample&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/mining-sample(.*)$                    http://vocabs.gsq.digital/object?vocab_id=mining-sample&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Mining Survey Status
         # http://linked.data.gov.au/def/mining-survey-status
         RewriteRule ^/def/mining-survey-status/?$               http://vocabs.gsq.digital/vocabulary/mining-survey-status [R=302,L]
-        RewriteRule ^/def/mining-survey-status(.*)$             http://vocabs.gsq.digital/object?vocab_id=mining-survey-status&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/mining-survey-status(.*)$             http://vocabs.gsq.digital/object?vocab_id=mining-survey-status&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Sampling Method
         # http://linked.data.gov.au/def/sampling-method
         RewriteRule ^/def/sampling-method/?$                    http://vocabs.gsq.digital/vocabulary/sampling-method [R=302,L]
-        RewriteRule ^/def/sampling-method(.*)$                  http://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/sampling-method(.*)$                  http://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Seismic Sampling Method
         # http://linked.data.gov.au/def/seismic-sampling-method
         RewriteRule ^/def/seismic-sampling-method/?$            http://vocabs.gsq.digital/vocabulary/seismic-sampling-method [R=302,L]
-        RewriteRule ^/def/seismic-sampling-method(.*)$          http://vocabs.gsq.digital/object?vocab_id=seismic-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/seismic-sampling-method(.*)$          http://vocabs.gsq.digital/object?vocab_id=seismic-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Vocab: Spatial Region
         # http://linked.data.gov.au/def/spatial-region
         RewriteRule ^/def/spatial-region/?$                     http://vocabs.gsq.digital/vocabulary/spatial-region [R=302,L]
-        RewriteRule ^/def/spatial-region(.*)$                   http://vocabs.gsq.digital/object?vocab_id=spatial-region&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        RewriteRule ^/def/spatial-region(.*)$                   http://vocabs.gsq.digital/object?vocab_id=spatial-region&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
         # Multiple Vocabs: TERN's CorVeg
         # http://linked.data.gov.au/def/corveg-cv
