--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -346,6 +346,9 @@
 
         # Vocab: Geoscience Feature of Interest
         # http://linked.data.gov.au/def/geoscience-foi
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geoscience-foi(.*)$                   https://vocabs.gsq.digital/object?vocab_id=geoscience-feature-of-interest&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_format=text/turtle [R=302,NE,L]
         RewriteRule ^/def/geoscience-foi/?$                     https://vocabs.gsq.digital/vocabulary/geoscience-feature-of-interest [R=302,L]
         RewriteRule ^/def/geoscience-foi(.*)$                   https://vocabs.gsq.digital/object?vocab_id=geoscience-feature-of-interest&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
 
