--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -331,6 +331,9 @@
 
         # Vocab: Earth Science Data Category
         # http://linked.data.gov.au/def/earth-science-data-category
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/earth-science-data-category(.*)$      https://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_format=text/turtle [R=302,NE,L]
         RewriteRule ^/def/earth-science-data-category/?$        https://vocabs.gsq.digital/vocabulary/earth-science-data-category [R=302,L]
         RewriteRule ^/def/earth-science-data-category(.*)$      https://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
 
