--- a/conf/linked.data.gov.au.conf
+++ b/conf/linked.data.gov.au.conf
@@ -299,7 +299,7 @@
         # http://linked.data.gov.au/def/reg-status
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/reg-status(.*)$                       http://www.linked.data.gov.au/def/reg-status$1.ttl [R=302,L]
+        RewriteRule ^/def/reg-status(.*)$                       http://www.linked.data.gov.au/def/reg-status$1.ttl? [R=302,L]
         RewriteRule ^/def/reg-status(.*).ttl$                   http://www.linked.data.gov.au/def/reg-status$1.ttl [R=302,L]
         RewriteRule ^/def/reg-status(.*)$                       http://www.linked.data.gov.au/def/reg-status$1 [R=302,L]
 
